rbx_binary/src/tests/snapshots/rbx_binary__tests__util__three-intvalues__decoded.snap
---
source: rbx_binary/src/tests/util.rs
expression: decoded_viewed
---
- referent: referent-0
  name: Value=1234567
  class: IntValue
  properties:
    AttributesSerialize:
      Type: BinaryString
      Value: ""
    Tags:
      Type: BinaryString
      Value: ""
    Value:
      Type: Int64
      Value: 1234567
  children: []
- referent: referent-1
  name: Value=1337
  class: IntValue
  properties:
    AttributesSerialize:
      Type: BinaryString
      Value: ""
    Tags:
      Type: BinaryString
      Value: ""
    Value:
      Type: Int64
      Value: 1337
  children: []
- referent: referent-2
  name: Value=-7654321
  class: IntValue
  properties:
    AttributesSerialize:
      Type: BinaryString
      Value: ""
    Tags:
      Type: BinaryString
      Value: ""
    Value:
      Type: Int64
      Value: -7654321
  children: []
